refactor 重构为 specBuilderFactory 模式，以便后续增加新的类型支持，部分注解优先级配置因此变更；完善几何数据类型和空间索引支持；模版引擎从 Velocity 改为 Pebble；支持 SQL 生成器扩展；